--- a/ShopperManagement.html
+++ b/ShopperManagement.html
@@ -65,15 +65,15 @@ Members:
         <div class="row">
             <!-- Password -->
             <div class="col-md-6 mb-3">
-                <label for="customerName" class="form-label">Password</label>
-                <input type="text" class="form-control" id="password" required>
-                <div class="invalid-feedback">Please enter a valid name.</div>
+                <label for="password" class="form-label">Password</label>
+                <input type="password" class="form-control" id="password" required>
+                <div class="invalid-feedback">Please enter a valid password.</div>
             </div>
             <!-- Confirm Password -->
             <div class="col-md-6 mb-3">
-                <label for="customerEmail" class="form-label">Confirm Password</label>
-                <input type="email" class="form-control" id="confirmPassword" required>
-                <div class="invalid-feedback">Please enter a valid email.</div>
+                <label for="confirmPassword" class="form-label">Confirm Password</label>
+                <input type="password" class="form-control" id="confirmPassword" required>
+                <div class="invalid-feedback">Please confirm your password.</div>
             </div>
         </div>
         <div class="row">
@@ -126,9 +126,9 @@ Members:
             </div>
 
             <!-- Card Details (only show if Credit/Debit is selected) -->
-            <div class="col-md-6 mb-3">
+            <div class="col-md-6 mb-3" id="cardDetails" style="display: none;">
                 <label for="cardNumber" class="form-label">Card Number</label>
-                <input type="text" class="form-control" id="cardNumber" placeholder="xxxx-xxxx-xxxx-xxxx" required>
+                <input type="text" class="form-control" id="cardNumber" placeholder="xxxx-xxxx-xxxx-xxxx">
                 <div class="invalid-feedback">Please enter a valid card number.</div>
             </div>
         </div>
@@ -137,7 +137,7 @@ Members:
         <div class="text-center mt-4">
             <button class="btn btn-dark btn-lg" type="submit">Submit</button>
         </div>
-        <! -- Already have an account? -->
+        <!-- Already have an account? -->
         <div class="text-center mt-4">
             <a href="login.html">Already have an account?</a>
         </div>
@@ -155,14 +155,11 @@ Members:
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Custom JS for form validation -->
 <script>
-    // Example starter JavaScript for disabling form submissions if there are invalid fields
     (function () {
         'use strict'
 
-        // Fetch all the forms we want to apply custom Bootstrap validation styles to
         var forms = document.querySelectorAll('.needs-validation')
 
-        // Loop over them and prevent submission
         Array.prototype.slice.call(forms)
             .forEach(function (form) {
                 form.addEventListener('submit', function (event) {
@@ -175,6 +172,40 @@ Members:
                 }, false)
             })
     })()
+
+    document.getElementById('shopperForm').addEventListener('submit', function (event) {
+        event.preventDefault();
+        let form = event.target;
+        let data = {
+            name: form.elements['customerName'].value,
+            email: form.elements['customerEmail'].value,
+            password: form.elements['password'].value,
+            address: form.elements['customerAddress'].value,
+            city: form.elements['customerCity'].value,
+            state: form.elements['customerState'].value,
+            zip: form.elements['customerZip'].value,
+            country: form.elements['customerCountry'].value,
+            paymentMethod: form.elements['paymentMethod'].value,
+            cardNumber: form.elements['cardNumber'].value
+        };
+
+        let jsonData = JSON.stringify(data);
+        alert(jsonData);
+        form.reset();
+        form.classList.remove('was-validated');
+    });
+
+
+    document.getElementById('paymentMethod').addEventListener('change', function (event) {
+        var cardDetails = document.getElementById('cardDetails');
+        if (event.target.value === 'credit' || event.target.value === 'debit') {
+            cardDetails.style.display = 'block';
+            document.getElementById('cardNumber').required = true;
+        } else {
+            cardDetails.style.display = 'none';
+            document.getElementById('cardNumber').required = false;
+        }
+    });
 </script>
 </body>
 </html>
