--- a/ShopperManagement.html
+++ b/ShopperManagement.html
@@ -11,27 +11,27 @@ Members:
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="Shopper management page" />
-    <meta name="author" content="Your Website" />
-    <title>Sign Up</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>The Bookshelf</title>
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <!-- Bootstrap icons-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
 </head>
 <body>
-<!-- Navigation -->
+<!-- Navigation-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="index.html">Your Shop</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+        <a class="navbar-brand" href="index.html">The Bookshelf</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Shop</a></li>
+                <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                <li class="nav-item"><a class="nav-link" href= "browseBooks.html">Browse Books</a></li>
+                <li class="nav-item"><a class="nav-link" href="ShopperManagement.html">Join The Bookshelf</a></li>
             </ul>
             <form class="d-flex">
                 <button class="btn btn-outline-dark" type="submit">
@@ -43,10 +43,18 @@ Members:
         </div>
     </div>
 </nav>
-
+<!-- Header-->
+<header class="bg-dark py-5">
+    <div class="container px-4 px-lg-5 my-5">
+        <div class="text-center text-white">
+            <h1 class="display-4 fw-bolder">Discover Your Next Favorite Book at The Bookshelf</h1>
+            <p class="lead fw-normal text-white-50 mb-0">Your trusted source for bestsellers, classics, and more.</p>
+        </div>
+    </div>
+</header>
 <!-- Shopper Management Form -->
 <div class="container mt-5 mb-5">
-    <h1 class="text-center mb-4">SIGN UP FOR EXCITING DEALS!!!!!!</h1>
+    <h1 class="text-center mb-4" id="scrollUp" >SIGN UP FOR EXCITING DEALS!!!!!!</h1>
     <form id="shopperForm" class="needs-validation" novalidate>
         <div class="row">
             <!-- Customer Name -->
@@ -150,49 +158,15 @@ Members:
     </form>
 </div>
 
-<!-- Footer -->
+<!-- Footer-->
 <footer class="py-5 bg-dark">
-    <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p>
-    </div>
+    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; The Bookshelf 2024</p></div>
 </footer>
-
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-<!-- Custom JS for form validation -->
-<script>
-    document.getElementById('shopperForm').addEventListener('submit', function (event) {
-        event.preventDefault();
-        let form = event.target;
-        let data = {
-            name: form.elements['customerName'].value,
-            age: form.elements['customerAge'].value,
-            email: form.elements['customerEmail'].value,
-            password: form.elements['password'].value,
-            address: form.elements['customerAddress'].value,
-            city: form.elements['customerCity'].value,
-            state: form.elements['customerState'].value,
-            zip: form.elements['customerZip'].value,
-            country: form.elements['customerCountry'].value,
-            paymentMethod: form.elements['paymentMethod'].value,
-            cardNumber: form.elements['cardNumber'].value
-        };
-
-        let jsonData = JSON.stringify(data);
-        alert(jsonData);
-        form.reset();
-    });
-
-    document.getElementById('paymentMethod').addEventListener('change', function (event) {
-        var cardDetails = document.getElementById('cardDetails');
-        if (event.target.value === 'credit' || event.target.value === 'debit') {
-            cardDetails.style.display = 'block';
-            document.getElementById('cardNumber').required = true;
-        } else {
-            cardDetails.style.display = 'none';
-            document.getElementById('cardNumber').required = false;
-        }
-    });
-</script>
+<!-- Bootstrap core JS-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<!-- Core theme JS-->
+<script src="js/scripts.js"></script>
 </body>
 </html>
