--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Members:
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
-                <li class="nav-item"><a class="nav-link" href= "#!">Browse Books</a></li>
+                <li class="nav-item"><a class="nav-link" href="#booksListing">Browse Books</a></li>
                 <li class="nav-item"><a class="nav-link" id="joinLink" href="ShopperManagement.html">Join The Bookshelf</a></li>
             </ul>
             <form class="d-flex">
@@ -54,7 +54,7 @@ Members:
     </div>
 </header>
 <!-- Section: Book Listings-->
-<section class="py-5">
+<section class="py-5" id="booksListing">
     <div class="container px-4 px-lg-5 mt-5">
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
             <div class="col mb-5">
