-Validation Updates. -JSON console output. -Stop page reload.

--- a/ShopperManagement.html
+++ b/ShopperManagement.html
@@ -61,20 +61,20 @@ Members:
             <div class="col-md-4 mb-3">
                 <label for="customerName" class="form-label">Full Name</label>
                 <input type="text" class="form-control" id="customerName" placeholder="John Doe">
-                <span id="customerName-error" style="color:red;"></span>
+                <span id="customerName-error" class="error" style="color:red;"></span>
             </div>
             <!-- Age -->
             <div class="col-md-4 mb-3">
                 <label for="customerAge" class="form-label">Shopper Age</label>
                 <input type="number" class="form-control" id="customerAge" placeholder="18">
-                <span id="customerAge-error" style="color:red;"></span>
+                <span id="customerAge-error" class="error" style="color:red;"></span>
             </div>
 
             <!-- Email -->
             <div class="col-md-4 mb-3">
                 <label for="customerEmail" class="form-label">Email Address</label>
                 <input type="text" class="form-control" id="customerEmail" placeholder="john@example.com">
-                <span id="customerEmail-error" style="color:red;"></span>
+                <span id="customerEmail-error" class="error" style="color:red;"></span>
             </div>
 
         </div>
@@ -83,13 +83,13 @@ Members:
             <div class="col-md-6 mb-3">
                 <label for="password" class="form-label">Password</label>
                 <input type="password" class="form-control" id="password">
-                <span id="password-error" style="color:red;"></span>
+                <span id="password-error" class="error" style="color:red;"></span>
             </div>
             <!-- Confirm Password -->
             <div class="col-md-6 mb-3">
                 <label for="confirmPassword" class="form-label">Confirm Password</label>
                 <input type="password" class="form-control" id="confirmPassword">
-                <span id="confirmPassword-error" style="color:red;"></span>
+                <span id="confirmPassword-error" class="error" style="color:red;"></span>
             </div>
         </div>
         <div class="row">
@@ -97,14 +97,14 @@ Members:
             <div class="col-md-6 mb-3">
                 <label for="customerAddress" class="form-label">Address</label>
                 <input type="text" class="form-control" id="customerAddress" placeholder="1234 Main St">
-                <span id="customerAddress-error" style="color:red;"></span>
+                <span id="customerAddress-error" class="error" style="color:red;"></span>
             </div>
 
             <!-- Customer City -->
             <div class="col-md-6 mb-3">
                 <label for="customerCity" class="form-label">City</label>
                 <input type="text" class="form-control" id="customerCity" placeholder="City">
-                <span id="customerCity-error" style="color:red;"></span>
+                <span id="customerCity-error" class="error" style="color:red;"></span>
             </div>
         </div>
 
@@ -113,21 +113,21 @@ Members:
             <div class="col-md-4 mb-3">
                 <label for="customerState" class="form-label">State</label>
                 <input type="text" class="form-control" id="customerState" placeholder="State">
-                <span id="customerState-error" style="color:red;"></span>
+                <span id="customerState-error" class="error" style="color:red;"></span>
             </div>
 
             <!-- Customer ZIP -->
             <div class="col-md-4 mb-3">
                 <label for="customerZip" class="form-label">ZIP Code</label>
                 <input type="text" class="form-control" id="customerZip" placeholder="ZIP">
-                <span id="customerZip-error" style="color:red;"></span>
+                <span id="customerZip-error" class="error" style="color:red;"></span>
             </div>
 
             <!-- Customer Country -->
             <div class="col-md-4 mb-3">
                 <label for="customerCountry" class="form-label">Country</label>
                 <input type="text" class="form-control" id="customerCountry" placeholder="Country">
-                <span id="customerCountry-error" style="color:red;"></span>
+                <span id="customerCountry-error" class="error" style="color:red;"></span>
             </div>
         </div>
 
