--- a/login.html
+++ b/login.html
@@ -69,7 +69,7 @@ Members:
             <div class="col-md mb-5">
                 <label for="password" class="form-label">Password</label>
                 <input type="text" class="form-control" id="password" required>
-                <div class="invalid-feedback">Please enter a valid name.</div>
+                <div class="invalid-feedback">Please enter a valid NAME.</div>
             </div>
 
         </div>
