--- a/ShopperManagement.html
+++ b/ShopperManagement.html
@@ -30,7 +30,7 @@ Members:
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                 <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                <li class="nav-item"><a class="nav-link" href= "browseBooks.html">Browse Books</a></li>
+                <li class="nav-item"><a class="nav-link" href= "#">Browse Books</a></li>
                 <li class="nav-item"><a class="nav-link" href="ShopperManagement.html">Join The Bookshelf</a></li>
             </ul>
             <form class="d-flex">
@@ -55,7 +55,7 @@ Members:
 <!-- Shopper Management Form -->
 <div class="container mt-5 mb-5">
     <h1 class="text-center mb-4" id="scrollUp" >SIGN UP FOR EXCITING DEALS!!!!!!</h1>
-    <form id="shopperForm" onsubmit="validateForm(event)">
+    <form id="shopperForm">
         <div class="row">
             <!-- Customer Name -->
             <div class="col-md-4 mb-3">
