--- a/login.html
+++ b/login.html
@@ -31,13 +31,13 @@ Members:
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                 <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                 <li class="nav-item"><a class="nav-link" href= "browseBooks.html">Browse Books</a></li>
-                <li class="nav-item"><a class="nav-link" href="ShopperManagement.html">Join The Bookshelf</a></li>
+                <li class="nav-item"><a class="nav-link" href="shopperManagement.html">Join The Bookshelf</a></li>
             </ul>
             <form class="d-flex">
-                <button class="btn btn-outline-dark" type="submit">
+                <button id="cartButton" class="btn btn-outline-dark" type="submit" onclick="cartButton()">
                     <i class="bi-cart-fill me-1"></i>
                     Cart
-                    <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+                    <span class="badge bg-dark text-white ms-1 rounded-pill" id="total-items-cart">0</span>
                 </button>
             </form>
         </div>
@@ -87,8 +87,9 @@ Members:
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 <!-- jQuery -->
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <!-- Core theme JS-->
-<script src="js/scripts.js" defer></script>
+<script src="js/shopperManagement.js" defer></script>
+<script src="js/scripts.js"></script>
 </body>
 </html>
