--- a/productManagement.html
+++ b/productManagement.html
@@ -218,26 +218,6 @@ Members:
                                         <h5>€ 132.00</h5>
                                     </div>
 
-                                    <h5 class="text-uppercase mb-3">Shipping</h5>
-
-                                    <div class="mb-4 pb-2">
-                                        <select data-mdb-select-init>
-                                            <option value="1">Standard-Delivery- €5.00</option>
-                                            <option value="2">Two</option>
-                                            <option value="3">Three</option>
-                                            <option value="4">Four</option>
-                                        </select>
-                                    </div>
-
-                                    <h5 class="text-uppercase mb-3">Give code</h5>
-
-                                    <div class="mb-5">
-                                        <div data-mdb-input-init class="form-outline">
-                                            <input type="text" id="form3Examplea2" class="form-control form-control-lg" />
-                                            <label class="form-label" for="form3Examplea2">Enter your code</label>
-                                        </div>
-                                    </div>
-
                                     <hr class="my-4">
 
                                     <div class="d-flex justify-content-between mb-5">
@@ -246,8 +226,7 @@ Members:
                                     </div>
 
                                     <button  type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-block btn-lg"
-                                             data-mdb-ripple-color="dark">Register
-                                    </button>
+                                             data-mdb-ripple-color="dark">Checkout</button>
                                 </div>
                             </div>
                         </div>
