--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@ Members:
 <!-- Navigation-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="#!">The Bookshelf</a>
+        <a class="navbar-brand" href="index.html">The Bookshelf</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="#booksListing">Browse Books</a></li>
                 <li class="nav-item"><a class="nav-link" id="joinLink" href="shopperManagement.html">Join The Bookshelf</a></li>
+                <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
             </ul>
             <form class="d-flex">
-                <button id="cartButton" class="btn btn-outline-dark">
+                <button id="cartButton" type="button" class="btn btn-outline-dark">
                     <i class="bi-cart-fill me-1"></i>
                     Cart
                     <span class="badge bg-dark text-white ms-1 rounded-pill" id="total-items-cart">0</span>
@@ -163,12 +163,14 @@ Members:
 <footer class="py-5 bg-dark">
     <div class="container"><p class="m-0 text-center text-white">Copyright &copy; The Bookshelf 2024</p></div>
 </footer>
+<!-- JQuery -->
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-<!-- jQuery -->
-<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <!-- Core theme JS-->
-<script src="js/shopperManagement.js" defer></script>
 <script src="js/scripts.js"></script>
+<script src="js/productManagement.js"></script>
+<script src="js/shopperManagement.js" defer></script>
+
 </body>
 </html>
