--- a/login.html
+++ b/login.html
@@ -58,7 +58,7 @@ Members:
     <form id="shopperForm" class="needs-validation" novalidate>
         <div class="row">
             <!-- Email -->
-            <div class="col-md mb-5">
+            <div class="col-md  mb-5">
                 <label for="customerEmail" class="form-label">Email Address</label>
                 <input type="email" class="form-control" id="customerEmail" placeholder="john@example.com" required>
                 <div class="invalid-feedback">Please enter a valid email.</div>
@@ -66,7 +66,7 @@ Members:
         </div>
         <div class="row">
             <!-- Password -->
-            <div class="col-md mb-5">
+            <div class="col-md  mb-5">
                 <label for="password" class="form-label">Password</label>
                 <input type="text" class="form-control" id="password" required>
                 <div class="invalid-feedback">Please enter a valid NAME.</div>
@@ -84,12 +84,13 @@ Members:
 <footer class="py-5 bg-dark">
     <div class="container"><p class="m-0 text-center text-white">Copyright &copy; The Bookshelf 2024</p></div>
 </footer>
+<!-- JQuery -->
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-<!-- jQuery -->
-<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <!-- Core theme JS-->
-<script src="js/shopperManagement.js" defer></script>
 <script src="js/scripts.js"></script>
+<script src="js/productManagement.js"></script>
+<script src="js/shopperManagement.js" defer></script>
 </body>
 </html>
