--- a/shopperManagement.html
+++ b/shopperManagement.html
@@ -32,9 +32,10 @@ Members:
                 <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                 <li class="nav-item"><a class="nav-link" href= "#">Browse Books</a></li>
                 <li class="nav-item"><a class="nav-link" href="shopperManagement.html">Join The Bookshelf</a></li>
+                <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
             </ul>
             <form class="d-flex">
-                <button id="cartButton" class="btn btn-outline-dark" type="submit">
+                <button id="cartButton" class="btn btn-outline-dark" type="button">
                     <i class="bi-cart-fill me-1"></i>
                     Cart
                     <span class="badge bg-dark text-white ms-1 rounded-pill" id="total-items-cart">0</span>
@@ -146,12 +147,14 @@ Members:
 <footer class="py-5 bg-dark">
     <div class="container"><p class="m-0 text-center text-white">Copyright &copy; The Bookshelf 2024</p></div>
 </footer>
+<!-- JQuery -->
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-<!-- jQuery -->
-<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <!-- Core theme JS-->
-<script src="js/shopperManagement.js"></script>
 <script src="js/scripts.js"></script>
+<script src="js/productManagement.js"></script>
+<script src="js/shopperManagement.js" defer></script>
+
 </body>
 </html>
