Using JSON to show Products in cart from products.json

--- a/index.html
+++ b/index.html
@@ -56,106 +56,8 @@ Members:
 <!-- Section: Book Listings-->
 <section class="py-5" id="booksListing">
     <div class="container px-4 px-lg-5 mt-5">
-        <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-            <div class="col mb-5">
-                <div class="card h-100">
-                    <!-- Book image-->
-                    <img class="card-img-top" src="assets/theGreatGatsby.png" alt="Book Cover" />
-                    <!-- Book details-->
-                    <div class="card-body p-4">
-                        <div class="text-center">
-                            <!-- Book title-->
-                            <h5 class="fw-bolder">The Great Gatsby</h5>
-                            <!-- Author -->
-                            <p>by F. Scott Fitzgerald</p>
-                            <!-- Book price-->
-                            $15.99
-                        </div>
-                    </div>
-                    <!-- Book actions-->
-                    <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to Cart</a></div>
-                    </div>
-                </div>
-            </div>
-            <div class="col mb-5">
-                <div class="card h-100">
-                    <!-- Sale badge-->
-                    <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
-                    <!-- Book image-->
-                    <img class="card-img-top" src="assets/1984.png" alt="Book Cover" />
-                    <!-- Book details-->
-                    <div class="card-body p-4">
-                        <div class="text-center">
-                            <!-- Book title-->
-                            <h5 class="fw-bolder">1984</h5>
-                            <!-- Author -->
-                            <p>by George Orwell</p>
-                            <!-- Book reviews-->
-                            <div class="d-flex justify-content-center small text-warning mb-2">
-                                <div class="bi-star-fill"></div>
-                                <div class="bi-star-fill"></div>
-                                <div class="bi-star-fill"></div>
-                                <div class="bi-star-fill"></div>
-                                <div class="bi-star-fill"></div>
-                            </div>
-                            <!-- Book price-->
-                            <span class="text-muted text-decoration-line-through">$20.00</span>
-                            $18.00
-                        </div>
-                    </div>
-                    <!-- Book actions-->
-                    <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to Cart</a></div>
-                    </div>
-                </div>
-            </div>
+        <div id="productsListingHome" class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
 
-            <!-- New Book 1: Pride and Prejudice -->
-            <div class="col mb-5">
-                <div class="card h-100">
-                    <!-- Book image-->
-                    <img class="card-img-top" src="assets/pride&prejudice.png" alt="Book Cover" />
-                    <!-- Book details-->
-                    <div class="card-body p-4">
-                        <div class="text-center">
-                            <!-- Book title-->
-                            <h5 class="fw-bolder">Pride and Prejudice</h5>
-                            <!-- Author -->
-                            <p>by Jane Austen</p>
-                            <!-- Book price-->
-                            $12.99
-                        </div>
-                    </div>
-                    <!-- Book actions-->
-                    <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to Cart</a></div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- New Book 2: To Kill a Mockingbird -->
-            <div class="col mb-5">
-                <div class="card h-100">
-                    <!-- Book image-->
-                    <img class="card-img-top" src="assets/toKillAMockingBird.png" alt="Book Cover" />
-                    <!-- Book details-->
-                    <div class="card-body p-4">
-                        <div class="text-center">
-                            <!-- Book title-->
-                            <h5 class="fw-bolder">To Kill a Mockingbird</h5>
-                            <!-- Author -->
-                            <p>by Harper Lee</p>
-                            <!-- Book price-->
-                            $14.99
-                        </div>
-                    </div>
-                    <!-- Book actions-->
-                    <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to Cart</a></div>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 </section>
