--- a/login.html
+++ b/login.html
@@ -32,6 +32,7 @@ Members:
                 <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                 <li class="nav-item"><a class="nav-link" href= "browseBooks.html">Browse Books</a></li>
                 <li class="nav-item"><a class="nav-link" href="shopperManagement.html">Join The Bookshelf</a></li>
+                <li class="nav-item"><a class="nav-link" href="returns.html">Returns</a></li>
             </ul>
             <form class="d-flex">
                 <button id="cartButton" class="btn btn-outline-dark" type="submit" onclick="cartButton()">
