--- a/productManagement.html
+++ b/productManagement.html
@@ -23,6 +23,7 @@
                 <li class="nav-item"><a class="nav-link" href="#booksListing">Browse Books</a></li>
                 <li class="nav-item"><a class="nav-link" href="shopperManagement.html">Join The Bookshelf</a></li>
                 <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+                <li class="nav-item"><a class="nav-link" href="returns.html">Returns</a></li>
             </ul>
         </div>
     </div>
