--- a/returns.html
+++ b/returns.html
@@ -125,7 +125,7 @@
 
                                     <!-- Continue Button -->
                                     <button type="button" class="btn btn-dark btn-block btn-lg"
-                                            ng-click="productCtrl.showReturnJSON()">Continue</button>
+                                            ng-click="productCtrl.showReturnJSON()">Submit Returns</button>
 
                                     <!-- Return JSON Output -->
                                     <div class="mt-4" ng-show="productCtrl.showCartJSON">
