--- a/shopperManagement.html
+++ b/shopperManagement.html
@@ -33,6 +33,7 @@ Members:
                 <li class="nav-item"><a class="nav-link" href= "#">Browse Books</a></li>
                 <li class="nav-item"><a class="nav-link" href="shopperManagement.html">Join The Bookshelf</a></li>
                 <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+                <li class="nav-item"><a class="nav-link" href="returns.html">Returns</a></li>
             </ul>
             <form class="d-flex">
                 <button id="cartButton" class="btn btn-outline-dark" type="button">
