--- a/about.html
+++ b/about.html
@@ -33,6 +33,7 @@ Members:
                 <li class="nav-item"><a class="nav-link" href="#booksListing">Browse Books</a></li>
                 <li class="nav-item"><a class="nav-link" id="joinLink" href="shopperManagement.html">Join The Bookshelf</a></li>
                 <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+                <li class="nav-item"><a class="nav-link" href="returns.html">Returns</a></li>
             </ul>
             <form class="d-flex">
                 <button id="cartButton" type="button" class="btn btn-outline-dark">
